[tool.poetry]
authors = [
    "Predrag Njegovanovic <predrag.njegovanovic@smartcat.io>",
    "Nebojsa Arezina <nebojsa.arezina@smartcat.io>",
    "Dusan Stevic <dusan.stevic@smartcat.io>",
]

description = "Module representing Sintra Data pipeline"
name = "sintra-data-service"
packages = [
    {include = "sintra-data-service"}
]
version = "0.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true 
force_grid_wrap = 0
use_parenthesis = true 
ensure_newline_before_comments = true 
line_length = 88

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.20.53"
botocore = "1.23.53"
solana = "0.22.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.1"
mypy = "^0.782"
ipdb = "^0.13.3"
click = "^7.1.2"
pylint = "^2.6.0"
pytest = "^6.2.1"
dynaconf = "3.1.2"