[tool.poetry]
authors = [
    "Predrag Njegovanovic <predrag.njegovanovic@smartcat.io>",
    "Nebojsa Arezina <nebojsa.arezina@smartcat.io>",
    "Dusan Stevic <dusan.stevic@smartcat.io>"
]

description = "Module representing Sintra Data pipeline."
name = "sintra"
packages = [
    { include = "sintra" },
    { include = "data_api" }
]
version = "0.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.20.53"
botocore = "1.23.53"
solana = "0.22.0"
StrEnum = "^0.4.7"
dynaconf = "^3.1.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests-aws4auth = "^1.1.2"
mangum = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
ipdb = "^0.13.3"
click = "^8.0.0"
pylint = "2.13.9"
pytest = "^6.2.1"
base58 = "^2.1.1"
orjson = "^3.6.8"
pydantic = "^1.9.0"
moto = "^3.1.9"
black = "^22.3.0"
requests = "^2.27.1"
isort = "^5.10.1"
trio = "^0.21.0"
pytest-factoryboy = "^2.5.0"
